--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 #app {
 	box-sizing: border-box;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 	/*border: 2px solid black;*/
 	display: flex;
 	flex-direction: column;
